Fix container margin collapse

--- a/docs/src/styles/_objects.container.scss
+++ b/docs/src/styles/_objects.container.scss
@@ -2,6 +2,7 @@
   padding: 0 1rem;
   margin: 0 auto;
   max-width: 720px;
+  overflow: auto;
 
   &--full-width {
     max-width: 100vw;
